--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <img src="images/img1.png" class="bg-img">
     </header>
-    <div class="container gen1">
+    <div class="container section1" title="Click the text for details">
         
     </div>
     <div class="recent">
         <h1>Recent</h1>
     </div>
 
-        <div class=" container gen2">
+        <div class=" container section2">
 
         </div>
     </div>
